# tutor_master

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
alembic/: README.md  env.py
alembic/versions/: 20241225_1806_7ed0d93a33d4_initial_database_creation.py  20241225_2042_e9a13d79713b_files_model_added.py  20241225_2128_8ad6b0c33baa_chat_messages_model_added.py  20241228_1919_0ff68e335218_agent_ai_service_field.py  20241230_1508_90c0ae5a005b_session_is_active_field.py  20241230_1558_0d71621333d6_agent_reminder_message_field.py  20250101_1505_d164307f0007_add_invites_table.py  20250101_1520_491b078d4281_add_invites_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: agents.py  auth.py  chat.py  files.py  invites.py  sessions.py  topics.py  users.py
app/core/: config.py  security.py  storage.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  agent.py  analytics.py  base.py  chat.py  file.py  invite.py  session.py  topic.py  user.py
app/schemas/: agent.py  auth.py  chat.py  file.py  invite.py  session.py  topic.py  user.py
app/scripts/: change_user_password.py  create_superuser.py  manage.py
app/services/: ai.py  analytics.py
app/services/ai/: __init__.py  ai_service.py
app/tests/: conftest.py
app/tests/api/: test_agents.py  test_auth.py  test_chat.py  test_files.py  test_sessions.py  test_topics.py  test_users.py
